Master New Search

--- a/templates/base.html
+++ b/templates/base.html
@@ -23,6 +23,7 @@
         <a href="{{ url_for('dashboard') }}">Dashboard</a>
         <a href="/">Logout</a>
         <a href="/enternew">Enter Student</a>
+        <a href="/searchstudent">Search Student</a>
     </nav>
     <hr>
     <div class="content">
